--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "redux": "^3.0.5"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register 'components/**/*.spec.@(js)' --reporter nyan",
