--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "mocha": "^2.3.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "redux": "^3.0.5"
   },
   "scripts": {
