--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "mocha": "^2.3.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "redux": "^3.0.5"
+    "redux": "^3.0.5",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register 'components/**/*.spec.@(js)' --reporter nyan",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "build": "webpack --progress --colors",
+    "build:watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
