--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha": "^2.3.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.6",
     "redux": "^3.0.5",
     "webpack": "^1.12.9"
   },
